--- a/Sweepatic_404.html
+++ b/Sweepatic_404.html
@@ -9,6 +9,7 @@
         html {
           margin:0;
           padding:0;
+          background-color:#efefef;
         }
 
         body {
@@ -17,6 +18,7 @@
         }
 
         img{
+          width:100%;
         }
 
         h1 {
@@ -45,7 +47,8 @@
           display:flex;
           flex-flow: column nowrap;
           align-items:center;
-          justify-content: space-between;
+          justify-content: center;
+          height:90vh;
         }
 
         .flex-item{
@@ -57,9 +60,6 @@
           padding:10px 10%;
         }
 
-        .flex-item img {
-          width:100%;
-        }
 
     </style>
 </head>
